k3d/k3dquiz-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quiz-app
  namespace: quiz
  labels:
    app: quiz-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quiz-app
  template:
    metadata:
      labels:
        app: quiz-app
    spec:
      containers:
        - name: quiz-app
          image: quiz-app:local # fertiggestelltes docker-image
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: quiz-app
  namespace: quiz
spec:
  selector:
    app: quiz-app
  ports:
    - port: 3000
      targetPort: 3000
